--- a/src/styles/pages/slider.scss
+++ b/src/styles/pages/slider.scss
@@ -30,7 +30,10 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding-right: 32px; 
     }
   }
 }
+
+
 
